--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,12 @@
-body{
+body {
+  font-family: 'Roboto';
+
+  color: #ffffff;
   height: 123rem;
-  font-family: 'Roboto', sans-serif;
 }
+
 /* Resolution 520px */
+/* Header */
 .menu {
   display: flex;
   flex-wrap: wrap;
@@ -10,9 +14,9 @@ body{
   position: fixed;
 
   max-width: 100vw;
-
+  padding-top: 1rem;
   width: 100vw;
- 
+
 }
 
 .menu-pesquisa {
@@ -20,46 +24,92 @@ body{
   background-position: right;
   background-repeat: no-repeat;
 
-
-  background-position-x: 17rem;
+  background-position-x: 19.5rem;
   height: 2rem;
   margin-top: .5rem;
-  order: 3;
+  order: 5;
   padding-left: 0;
-  width: 20rem;
+  width: 22rem;
+
+}
+
+input[type=text],
+select {
+  border: 1px solid #ccc;
+  border-radius: 1px;
+  box-sizing: border-box;
+  display: inline-block;
+  padding: 15px 20px;
+
 }
 
 .menu .logo {
   height: 3rem;
   order: 1;
+
 }
 
 .menu-perfil {
   order: 2;
   padding: 0 2rem;
+
 }
 
 .menu-nav {
-  order: 4;
-  background: #8158c5;
-  padding: 1rem;
+  order: 6;
+  padding-top: .5rem;
+
 }
 
-.menu-nav ul{
-  color: #ffffff;
+.menu-nav ul {
   display: flex;
   flex-direction: row;
+
+  color: #ffffff;
+
 }
 
-.menu-nav a{
+#links li {
+  margin: .2rem 0;
+
+}
+
+.menu-nav a {
   text-align: center;
-  margin: .5rem;
-  font-weight: 300;
+
   color: #ffffff;
+  font-weight: 400;
+  margin: .5rem;
   text-decoration: none;
 }
+
+#links {
+  display: none;
+  flex-direction: column;
+
+  align-items: center;
+  background: #8158c5;
+  width: 100vw;
+
+}
+
+.icon {
+  order: 4;
+
+}
+
 /* Resolution 768px */
-@media (min-width: 768px) {}
+@media (min-width: 768px) {
+  #links {
+    display: block;
+
+  }
+
+  .icon {
+    display: none;
+
+  }
+}
 
 /* Resolution 1024px */
 @media (min-width: 1024px) {}
