--- a/css/styles.css
+++ b/css/styles.css
@@ -110,6 +110,7 @@ select {
   }
 
   .menu .logo {
+
     order: 3;
 
   }
@@ -139,8 +140,28 @@ select {
 
 /* Resolution 1024px */
 @media (min-width: 1024px) {
+  .menu {
+    align-items: center;
+  }
+
+  .menu .logo {
+    height: 4rem;
+  }
+
+  .menu-pesquisa {
+    width: 12rem;
+  }
+
   #links {
-    display: block;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 1rem;
+    font-size: .9rem;
+  }
+
+  #links li {
+    margin: 0 .2rem;
 
   }
 
