--- a/css/styles.css
+++ b/css/styles.css
@@ -145,8 +145,19 @@ select {
 
 /* Resolution 1024px */
 @media (min-width: 1024px) {
+  body {
+    display: flex;
+    justify-content: center;
+
+    margin: 0 auto;
+    max-width: 1170px !important;
+
+  }
+
   .menu {
     align-items: center;
+
+    justify-content: space-around;
     padding-bottom: 0;
   }
 
@@ -155,11 +166,10 @@ select {
 
   }
 
-
   #links {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
 
     font-size: .9rem;
     height: 4rem;
@@ -167,16 +177,26 @@ select {
   }
 
   #links li {
-    margin: 0 .2rem;
+    margin: 0 .5rem;
+    padding: 1.5rem 0;
 
   }
 
+  #links li a {
+    padding: 1.5rem 0;
+  }
+
   #links :hover {
-    background-color: black;
+    background-color: #ffa200;
   }
 
   .menu-pesquisa {
     width: 12rem;
+  }
+
+  input[type=text],
+  select {
+    margin-left: 0;
 
   }
 
