--- a/css/index.css
+++ b/css/index.css
@@ -1,19 +1,45 @@
 /* Resolution 520px */
+/* Banner */
 main {
   display: flex;
+  padding-top: 6rem;
 }
 
 .banner {
-  padding-top: 14vh;
+
   position: relative;
 }
 
 .banner img {
+  height: 25vh;
   max-width: 100vw;
+  object-fit: cover;
+  
 }
 
 /* Resolution 768px */
-@media (min-width: 768px) {}
+@media (min-width: 768px) {
+  main {
+    padding-top: 9vh;
+
+  }
+
+  .banner img {
+    height: 30vh;
+
+  }
+
+}
 
 /* Resolution 1024px */
-@media (min-width: 1024px) {}
+@media (min-width: 1024px) {
+  main {
+    padding-top: 8rem;
+
+  }
+
+  .banner img {
+    height: 40vh;
+
+  }
+}
