--- a/css/index.css
+++ b/css/index.css
@@ -3,18 +3,40 @@
 main {
   display: flex;
   padding-top: 6rem;
+  flex-direction: column;
 }
 
 .banner {
-
   position: relative;
+
 }
 
 .banner img {
   height: 25vh;
   max-width: 100vw;
   object-fit: cover;
-  
+
+}
+
+/* Categorias */
+.categorias {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+
+  background-color: #ffa200;
+  margin-top: -.25rem;
+  padding: .5rem 0;
+}
+
+.categorias img {
+  object-fit: cover;
+
+  height: 8.5rem;
+  margin-top: .15rem;
+  max-width: 100vw;
+  padding: 0rem;
+  width: 33rem;
 }
 
 /* Resolution 768px */
@@ -29,6 +51,22 @@ main {
 
   }
 
+  /* Categorias */
+  .categorias {
+
+    flex-direction: row;
+    justify-content: space-evenly;
+
+    padding: .5rem 0;
+
+  }
+
+  .categorias img {
+    height: 4rem;
+    width: 14rem;
+
+  }
+
 }
 
 /* Resolution 1024px */
@@ -40,6 +78,23 @@ main {
 
   .banner img {
     height: 40vh;
+
+  }
+
+  /* Categorias */
+  .categorias {
+
+    flex-direction: row;
+    justify-content: center;
+
+    padding: .5rem 0;
+
+  }
+
+  .categorias img {
+    height: 10vh;
+    width: 22vw;
+    margin: 0 .5rem;
 
   }
 }
