--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body {
-  font-family: 'Roboto';
-  background-color: red;
+  font-family: 'Montserrat', sans-serif;
+  /* background-color: red; */
   color: #ffffff;
   height: 123rem;
 }
