--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,10 @@
 body {
-  font-family: 'Montserrat', sans-serif;
-  /* background-color: red; */
-  color: #ffffff;
-  height: 123rem;
-  max-width: 1170px;
   display: flex;
   flex-wrap: wrap;
+  font-family: 'Montserrat', sans-serif;
+
+  color: #ffffff;
+  max-width: 1170px;
 }
 
 /* Header */
@@ -19,7 +18,7 @@ body {
   max-width: 100vw;
   padding: 1rem 0;
   width: 100vw;
-  z-index: 99;
+  z-index: 999;
 }
 
 .menu .logo {
@@ -111,18 +110,21 @@ select {
 
 .vantagem p::before {
   content: url(../img/outros/pata.png);
+
   margin: .5rem;
 }
 
 .vantagem p {
   text-transform: uppercase;
-  font-size: .8rem;
+
   color: #ffffff;
+  font-size: .8rem;
   margin: 1rem;
 }
 
 .vantagem p strong {
   font-weight: bold;
+
   color: #ffffff;
 }
 
@@ -136,26 +138,27 @@ select {
 }
 
 .newsletter-informacao h3 {
-  text-transform: uppercase;
-  font-size: 1.3rem;
-  color: #ffffff;
-  margin: .5rem;
   font-weight: bold;
+  text-transform: uppercase;
+
   color: #ffffff;
+  font-size: 1.3rem;
+  margin: .5rem;
 }
 
 .newsletter-informacao p {
+  text-align: center;
+
+  color: #ffffff;
   font-size: .9rem;
   line-height: 1.3rem;
-  color: #ffffff;
   margin: 1rem;
-  text-align: center;
 }
 
 form {
   display: flex;
-  justify-content: center;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 form input {
@@ -164,12 +167,13 @@ form input {
 
 form input[type=text],
 form input[type=email] {
-  background: #8158c5;
-  color: #ffffff;
   border: none;
+
+  background: #8158c5;
   border-bottom: 1px solid #ffffff !important;
-  padding: .5rem 0;
+  color: #ffffff;
   margin: 1rem;
+  padding: .5rem 0;
 }
 
 form input[type=text]:focus-visible,
@@ -182,72 +186,76 @@ form input::placeholder {
 }
 
 form input[type=submit] {
+  text-decoration: none;
+  cursor: pointer;
+
   background-color: #ffa200;
   border: none;
   color: white;
-  padding: 1rem 4rem;
-  text-decoration: none;
   margin: 1rem 3rem;
-  cursor: pointer;
+  padding: 1rem 4rem;
 }
 
 footer {
+  align-items: center;
   display: flex;
   flex-direction: column;
-}
-
-.redes-sociais {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
+
+  margin: 1rem;
+  width: 100vw;
 }
 
 .footer-logo {
-  width: 20rem;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.footer-logo:nth-child(1) {
   margin: .5rem auto;
+  width: 20rem;
 }
 
 .redes-sociais img {
   display: inline-block;
+
   margin: 1rem;
   width: 2.5rem;
 }
 
 .endereco {
-  font-size: .7rem;
-  margin: 0.5rem 2rem;
   text-align: center;
+
+  font-size: .8rem;
+  margin: 0.5rem 2rem;
 }
 
+
 .outras-pag {
-  margin-top: 1rem;
-  display: block;
-  align-items: flex-start;
-  flex-wrap: wrap;
-  flex-direction: column;
-  justify-content: normal;
-  margin: 0 1rem;
-  width: 10rem;
+  margin-right: 2rem;
 }
 
 footer h2 {
-  color: #8158c5;
   font-weight: bold;
   text-transform: uppercase;
+
+  color: #8158c5;
 }
 
 footer li {
   margin: .8rem 0;
+  font-size: 0.9rem;
   font-weight: 600;
 }
 
-.test {
+.outros-links {
   display: flex;
-  justify-content: center;
-  margin-left: 6rem;
   flex-wrap: wrap;
+  justify-content: center;
+
+  margin-left: 2rem;
 }
 
 .pagamento {
@@ -255,7 +263,31 @@ footer li {
 }
 
 .pagamento img {
-  width: 15rem;
+  width: 12rem;
+  margin-top: 1rem;
+}
+
+.desenvolvido {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  
+  border-top: 1px solid #ccc;
+  height: 3rem;
+  margin: 0 auto;
+  width: 90%;
+}
+
+.desenvolvido p {
+  text-transform: uppercase;
+
+  font-size: .7rem;
+  margin-right: 1rem;
+
+}
+
+.desenvolvido img {
+  width: 3rem;
 }
 
 /* Resolution 768px */
@@ -302,9 +334,10 @@ footer li {
 
   /* Newsletter */
   .vantagem {
+    justify-content: center;
+
     border-bottom: 2px solid #ffa200;
     width: 70vw;
-    justify-content: center;
   }
 
   .vantagem p {
@@ -322,21 +355,37 @@ footer li {
   }
 
   .endereco {
-    font-size: .7rem;
-    margin: 1rem 6rem;
     text-align: center;
-  }
 
-  .test {
-    margin-left: 3rem;
+    margin: 1rem 6rem;
+    font-size: .7rem;
   }
 
   .pagamento {
     margin: 2rem 1rem;
+    width: 24rem;
   }
 
-  .pagamento img{
-    width: 18rem;
+  .pagamento img {
+    width: 15rem;
+  }
+
+  .pagamento h2 {
+    margin-bottom: 1rem;
+  }
+
+  footer {
+    align-items: flex-start;
+    flex-direction: row;
+  }
+
+  .footer-logo {
+    margin-top: -4rem;
+  }
+
+  .outros-links {
+    margin-top: 3rem;
+
   }
 }
 
@@ -403,7 +452,6 @@ footer li {
   }
 
   .newsletter-informacao {
-    width: 100vw;
     justify-content: center;
     flex-direction: column;
 
@@ -411,9 +459,9 @@ footer li {
   }
 
   .newsletter {
-    justify-content: center;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
   }
 
   .vantagem {
@@ -423,5 +471,33 @@ footer li {
   form input[type=submit] {
     padding: .5rem 1.5rem;
     margin: 1rem 0rem;
+  }
+
+  footer {
+    align-items: center;
+    flex-direction: row;
+    
+    margin: 2rem 0;
+    padding-bottom: 1rem;
+  }
+
+  .pagamento h2 {
+    margin-bottom: .5rem;
+  }
+
+  .footer-logo {
+    margin-left: 5rem;
+  }
+
+  .outras-pag {
+    margin-bottom: 1rem;
+  }
+
+  .outros-links {
+    margin-top: 0;
+  }
+
+  .pagamento {
+    margin: 0rem 1rem;
   }
 }
